# Svg2Img

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xynotec/svg2img/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/agg_2.5/: agg2d.cpp  agg2d.h
app/src/main/cpp/common/: BasicTest.cpp  BasicTest.h  RGBImage.cpp  RGBImage.h  Typedef.h
app/src/main/cpp/freetype2/: freetype28d.lib
app/src/main/cpp/win32/buildtest/: buildtest.sln
app/src/main/cpp/win32/buildtest/NativeWrapper/: AssemblyInfo.cpp  NativeWrapper.cpp  NativeWrapper.h  NativeWrapper.vcxproj  NativeWrapper.vcxproj.filters  ReadMe.txt  Stdafx.cpp
app/src/main/cpp/win32/buildtest/TestApp/: MainForm.Designer.cs  MainForm.cs  TestApp.csproj
app/src/main/cpp/win32/buildtest/TestApp/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
app/src/main/cpp/win32/buildtest/buildtest/: buildtest.vcxproj  buildtest.vcxproj.filters
app/src/main/java/com/xynotec/svg2img/: ActivityMain.java  MainApplication.java  SvgView.java
app/src/main/java/com/xynotec/util/: Util.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xynotec/svg2img/: ExampleUnitTest.java
freetype/: CMakeLists.txt  build.gradle
freetype/src/main/: AndroidManifest.xml
freetype/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
